--- a/index.html
+++ b/index.html
@@ -1847,16 +1847,16 @@
                     <p class="text-gray-300 mb-6">Choose your English level to start the reading comprehension quiz:</p>
                     <div class="space-y-3">
                         <button onclick="startQuiz('A1')" class="w-full bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-lg font-semibold transition-colors">
-                            📖 A1 - Beginner (${QUIZ_QUESTIONS.A1.length} questions)
+                            📖 A1 - Beginner
                         </button>
                         <button onclick="startQuiz('A2')" class="w-full bg-green-600 hover:bg-green-700 px-6 py-3 rounded-lg font-semibold transition-colors">
-                            📚 A2 - Elementary (${QUIZ_QUESTIONS.A2.length} questions)
+                            📚 A2 - Elementary
                         </button>
                         <button onclick="startQuiz('B1')" class="w-full bg-yellow-600 hover:bg-yellow-700 px-6 py-3 rounded-lg font-semibold transition-colors">
-                            📖 B1 - Intermediate (${QUIZ_QUESTIONS.B1.length} questions)
+                            📖 B1 - Intermediate
                         </button>
                         <button onclick="startQuiz('B2')" class="w-full bg-red-600 hover:bg-red-700 px-6 py-3 rounded-lg font-semibold transition-colors">
-                            📘 B2 - Upper Intermediate (${QUIZ_QUESTIONS.B2.length} questions)
+                            📘 B2 - Upper Intermediate
                         </button>
                     </div>
                     <button onclick="closeModal()" class="mt-4 text-gray-400 hover:text-white">Cancel</button>
