--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
                                 Read Full Story →
                             </button>
                         </div>
-                        <div class="w-full lg:w-80 h-64 bg-white/10 rounded-xl overflow-hidden relative">
-                            <img src="https://c02.purpledshub.com/uploads/sites/62/2025/07/Bathylepeta-wadatsumi.jpeg" alt="Deep ocean discovery" class="w-full h-full object-cover">
-                            <div class="absolute bottom-2 right-2 bg-black bg-opacity-60 text-white text-xs px-2 py-1 rounded">Image from: purpledshub.com</div>
-                        </div>
+                       <div class="w-full lg:w-80 h-64 bg-white/10 rounded-xl overflow-hidden relative">
+    <img id="featured-image" src="" alt="" class="w-full h-full object-cover">
+    <div id="featured-image-source" class="absolute bottom-2 right-2 bg-black bg-opacity-60 text-white text-xs px-2 py-1 rounded"></div>
+</div>
                     </div>
                 </div>
             </div>
@@ -812,6 +812,11 @@
             document.getElementById('featured-description').textContent = previewText;
             document.getElementById('featured-read-time').textContent = `⏱️ ${levelData.readTime} read`;
             document.getElementById('featured-level').textContent = `📊 ${currentDifficulty} Level`;
+            document.getElementById('featured-image').src = featuredArticle.image;
+            document.getElementById('featured-image').alt = featuredArticle.title;
+            document.getElementById('featured-image-source').textContent = featuredArticle.imageSource
+    ? `Image from: ${featuredArticle.imageSource}`
+    : '';
             
             // Store the current featured article for opening
             window.currentFeaturedArticle = featuredArticle;
