--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     title: "New Library Opens in Remote Village",
                     category: "Education",
                     date: new Date(Date.now() - 86400000).toISOString().split('T')[0],
-                    image: "https://cdn.standardmedia.co.ke/images/wysiwyg/images/k1QzVkKpZzdQbVGDoDhtoIvzQw2tIheTrmUVcMB1.jpg",
+                    image: "https://content.jdmagicbox.com/comp/def_content/libraries/default-libraries-2.jpg",
                     imageSource: "standardmedia.co.ke",
                     levels: {
                         A1: {
