--- a/index.html
+++ b/index.html
@@ -2353,5 +2353,10 @@
             switchCategory('top');
         });
     </script>
+    <script>
+  document.body.insertAdjacentHTML('beforeend', 
+    '<footer style="text-align:center; padding:10px; font-size:0.9em;">&copy; 2025 Ejemplo de nombre o el nombre de tu app. Todos los derechos reservados.</footer>'
+  );
+</script>
 </body>
 </html>
