--- a/index.html
+++ b/index.html
@@ -2355,7 +2355,7 @@
     </script>
     <script>
   document.body.insertAdjacentHTML('beforeend', 
-    '<footer style="text-align:center; padding:10px; font-size:0.9em;">&copy; 2025 Ejemplo de nombre o el nombre de tu app. Todos los derechos reservados.</footer>'
+    '<footer style="text-align:center; padding:10px; font-size:0.9em;">&copy; 2025 por Eduardo Ruiz (@ejruizgarcia). Esta app ha sido desarrollada utilizando Canva Code y tiene licencia CC BY-NC 4.0..</footer>'
   );
 </script>
 </body>
