--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         .featured-gradient {
             background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
         }
+        .footer {
+          background-color: #cccccc;  /* Gris claro */
+          color: #333333;             /* Texto oscuro para contraste */
+          font-size: 9px;            /* Más pequeño */
+          padding: 10px 0;            /* Espaciado vertical */
+          text-align: center;
+}
         
         @keyframes bounce-twice {
             0%, 20%, 50%, 80%, 100% {
@@ -2355,7 +2362,7 @@
     </script>
     <script>
   document.body.insertAdjacentHTML('beforeend', 
-    '<footer style="text-align:center; padding:10px; font-size:0.9em;">2025 por Eduardo Ruiz (@ejruizgarcia). Esta app ha sido desarrollada utilizando Canva Code y tiene licencia CC BY-NC 4.0..</footer>'
+    '<footer style="text-align:center; padding:10px; font-size:0.9em;">Esta app ha sido desarrollada por Eduardo Ruiz (@ejruizgarcia) utilizando Canva Code y tiene licencia CC BY-NC 4.0..</footer>'
   );
 </script>
 </body>
