--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         .featured-gradient {
             background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
         }
-        .footer {
+        .footnote {
           background-color: #cccccc;  /* Gris claro */
           color: #333333;             /* Texto oscuro para contraste */
           font-size: 9px;            /* Más pequeño */
