--- a/index.html
+++ b/index.html
@@ -2360,9 +2360,9 @@
             switchCategory('top');
         });
     </script>
-    <script>
+<script>
   document.body.insertAdjacentHTML('beforeend', 
-    '<footer style="text-align:center; padding:10px; font-size:0.9em;">Esta app ha sido desarrollada por Eduardo Ruiz (@ejruizgarcia) utilizando Canva Code y tiene licencia CC BY-NC 4.0..</footer>'
+    '<footer class="footnote">Esta app ha sido desarrollada por Eduardo Ruiz (@ejruizgarcia) utilizando Canva Code y tiene licencia CC BY-NC 4.0..</footer>'
   );
 </script>
 </body>
