--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
             background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
         }
         .footnote {
-          background-color: #cccccc;  /* Gris claro */
-          color: #333333;             /* Texto oscuro para contraste */
-          font-size: 9px;            /* Más pequeño */
+          color: #cccccc;             /* Texto oscuro para contraste */
+          font-size: 10px;            /* Más pequeño */
           padding: 10px 0;            /* Espaciado vertical */
           text-align: center;
 }
